--- a/src/style/App.module.scss
+++ b/src/style/App.module.scss
@@ -33,9 +33,9 @@
     }
 
     .letter{
-        background-color: #733E75;
+        background-color: #ecdaed;
         width: 100%;
-        height: 100vh;
+        height: 105vh;
 
         display: flex;
         justify-content: space-around;
@@ -44,7 +44,7 @@
 
         h1 {
             font-size: 3rem;
-            color: #FF30FF;
+            color: #733E75;
             max-width: 50%;
             font-weight: bolder;
         }
@@ -54,5 +54,16 @@
             color: #FF30FF;
             max-width: 50%;
         }
+    }
+
+    .theSky{
+       
+        width: 100%;
+        height: 100vh;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
     }
 }
