--- a/src/style/App.module.scss
+++ b/src/style/App.module.scss
@@ -59,11 +59,35 @@
     .theSky{
        
         width: 100%;
+        height: 105vh;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+    }
+
+    .quiz{
+        background-color: #ecdaed;
+        width: 100%;
         height: 100vh;
 
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: row;
+    }
+
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: #733E75;
+        border-radius: 10px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: #ecdaed;
     }
 }
