--- a/src/components/quiz/style.module.scss
+++ b/src/components/quiz/style.module.scss
@@ -40,6 +40,7 @@
             font-size: 2rem;
             text-align: center;
             width: 90%;
+            max-height: 5rem;
             color: #e1e1e1;
             background-color: #733E75;
             border: none;
