--- a/src/components/sky/style.module.scss
+++ b/src/components/sky/style.module.scss
@@ -41,7 +41,7 @@
             margin-left: 60rem;
             margin-top: 25rem;
 
-            max-width: 250px;
+            max-width: 15%;
         }
     }
 
